# TUMmer

./: .gitignore  Makefile.am  Readme.md  configure.ac
src/: Makefile.am  global.h  io.c  io.h  process.c  process.h  sequence.c  sequence.h  tummer.c
